fix notification z-index

--- a/src/app/components/notifications/notifications.component.less
+++ b/src/app/components/notifications/notifications.component.less
@@ -4,6 +4,7 @@
     right:0;
     width: 240px;
     padding: 0 15px;
+    z-index: 99999;
 
     &__message{
         padding: 5px 10px;
